--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper",
+  "name": "@crowdarchitects/metascraper",
   "homepage": "https://github.com/microlinkhq/metascraper#readme",
   "version": "",
   "author": {
@@ -102,10 +102,10 @@
     "lint": "standard-markdown README.md && standard",
     "prerelease": "npm run update:check && npm run contributors",
     "pretest": "npm run lint",
-    "release": "lerna publish --yes --sort --conventional-commits -m \"chore(release): %s\" --create-release github",
+    "release": "lerna publish --yes --sort --conventional-commits -m \"chore(release): %s\"",
     "test": "lerna exec npm run test",
-    "update": "lerna exec ncu -- --upgrade && ncu -- --upgrade",
-    "update:check": "lerna exec ncu -- --errorLevel 2 && ncu -- --errorLevel 2"
+    "update": "",
+    "update:check": ""
   },
   "private": true,
   "license": "MIT",
