--- a/packages/metascraper-logo-favicon/package.json
+++ b/packages/metascraper-logo-favicon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper-logo-favicon",
+  "name": "@crowdarchitects/metascraper-logo-favicon",
   "description": "metascraper logo favicon fallback",
   "homepage": "https://nicedoc.io/microlinkhq/metascraper/packages/metascraper-logo-favicon",
   "version": "5.14.23",
