--- a/packages/metascraper-title/package.json
+++ b/packages/metascraper-title/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper-title",
+  "name": "@crowdarchitects/metascraper-title",
   "description": "Get title property from HTML markup",
   "homepage": "https://metascraper.js.org",
   "version": "5.14.23",
