--- a/packages/metascraper-amazon/package.json
+++ b/packages/metascraper-amazon/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper-amazon",
+  "name": "@crowdarchitects/metascraper-amazon",
   "description": "metascraper integration with Amazon",
   "homepage": "https://nicedoc.io/microlinkhq/metascraper/packages/metascraper-amazon",
   "version": "5.14.23",
