--- a/packages/metascraper-clearbit/package.json
+++ b/packages/metascraper-clearbit/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper-clearbit",
+  "name": "@crowdarchitects/metascraper-clearbit",
   "description": "metascraper integration with Clearbit Logo API",
   "homepage": "https://nicedoc.io/microlinkhq/metascraper/packages/metascraper-clearbit",
   "version": "5.14.23",
