--- a/packages/metascraper-iframe/package.json
+++ b/packages/metascraper-iframe/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper-iframe",
+  "name": "@crowdarchitects/metascraper-iframe",
   "description": "Embed a representation of an URL on third party sites",
   "homepage": "https://nicedoc.io/microlinkhq/metascraper/packages/metascraper-iframe",
   "version": "5.14.23",
