--- a/packages/metascraper-image/package.json
+++ b/packages/metascraper-image/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper-image",
+  "name": "@crowdarchitects/metascraper-image",
   "description": "Get image property from HTML markup",
   "homepage": "https://nicedoc.io/microlinkhq/metascraper/packages/metascraper-image",
   "version": "5.14.23",
