--- a/packages/metascraper-logo/package.json
+++ b/packages/metascraper-logo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper-logo",
+  "name": "@crowdarchitects/metascraper-logo",
   "description": "Get logo property from HTML markup",
   "homepage": "https://nicedoc.io/microlinkhq/metascraper/packages/metascraper-logo",
   "version": "5.14.23",
