--- a/packages/metascraper-spotify/package.json
+++ b/packages/metascraper-spotify/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper-spotify",
+  "name": "@crowdarchitects/metascraper-spotify",
   "description": "metascraper integration with Spotify",
   "homepage": "https://nicedoc.io/microlinkhq/metascraper/packages/metascraper-spotify",
   "version": "5.14.23",
