--- a/packages/metascraper-uol/package.json
+++ b/packages/metascraper-uol/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "metascraper-uol",
+  "name": "@crowdarchitects/metascraper-uol",
   "description": "metascraper integration for website under Universo Online group",
   "homepage": "https://nicedoc.io/microlinkhq/metascraper/packages/metascraper-uol",
   "version": "5.14.23",
