--- a/packages/metascraper-uol/package.json
+++ b/packages/metascraper-uol/package.json
@@ -18,7 +18,7 @@
     "uol"
   ],
   "dependencies": {
-    "@metascraper/helpers": "^5.14.30",
+    "@metascraper/helpers": "^5.14.22",
     "tldts": "~5.6.68"
   },
   "devDependencies": {
@@ -49,5 +49,6 @@
     "env": [
       "mocha"
     ]
-  }
+  },
+  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0"
 }
