--- a/packages/metascraper-amazon/package.json
+++ b/packages/metascraper-amazon/package.json
@@ -16,7 +16,7 @@
     "metascraper"
   ],
   "dependencies": {
-    "@metascraper/helpers": "^5.14.30",
+    "@metascraper/helpers": "^5.14.22",
     "tldts": "~5.6.68"
   },
   "devDependencies": {
@@ -47,5 +47,6 @@
     "env": [
       "mocha"
     ]
-  }
+  },
+  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0"
 }
