--- a/packages/metascraper-clearbit/package.json
+++ b/packages/metascraper-clearbit/package.json
@@ -18,7 +18,7 @@
     "metascraper"
   ],
   "dependencies": {
-    "@metascraper/helpers": "^5.14.30",
+    "@metascraper/helpers": "^5.14.22",
     "got": "~11.8.0",
     "lodash": "~4.17.20",
     "tldts": "~5.6.68"
@@ -49,5 +49,6 @@
     "env": [
       "mocha"
     ]
-  }
+  },
+  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0"
 }
