--- a/packages/metascraper-iframe/package.json
+++ b/packages/metascraper-iframe/package.json
@@ -18,7 +18,7 @@
     "oembed"
   ],
   "dependencies": {
-    "@metascraper/helpers": "^5.14.30",
+    "@metascraper/helpers": "^5.14.22",
     "got": "~11.8.0",
     "lodash": "~4.17.20",
     "oembed-spec": "~1.3.18",
@@ -51,5 +51,6 @@
     "env": [
       "mocha"
     ]
-  }
+  },
+  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0"
 }
