--- a/packages/metascraper-image/package.json
+++ b/packages/metascraper-image/package.json
@@ -30,5 +30,6 @@
   "scripts": {
     "test": "exit 0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0"
 }
