--- a/packages/metascraper-readability/package.json
+++ b/packages/metascraper-readability/package.json
@@ -16,7 +16,7 @@
     "url"
   ],
   "dependencies": {
-    "@metascraper/helpers": "^5.14.30",
+    "@metascraper/helpers": "^5.14.22",
     "@mozilla/readability": "~0.3.0",
     "jsdom": "~16.4.0"
   },
@@ -47,5 +47,6 @@
     "env": [
       "mocha"
     ]
-  }
+  },
+  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0"
 }
