--- a/packages/metascraper-video/package.json
+++ b/packages/metascraper-video/package.json
@@ -16,7 +16,7 @@
     "video"
   ],
   "dependencies": {
-    "@metascraper/helpers": "^5.14.30",
+    "@metascraper/helpers": "^5.14.22",
     "lodash": "~4.17.20"
   },
   "devDependencies": {
@@ -46,5 +46,6 @@
     "env": [
       "mocha"
     ]
-  }
+  },
+  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0"
 }
