--- a/packages/metascraper-media-provider/package.json
+++ b/packages/metascraper-media-provider/package.json
@@ -51,6 +51,7 @@
     "test": "NODE_PATH=.. TZ=UTC DEBUG=metascraper*,-metascraper-media-provider:provider*  NODE_ENV=test mocha test"
   },
   "license": "MIT",
+  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0",
   "mocha": {
     "bail": true,
     "recursive": true,
@@ -62,6 +63,5 @@
     "env": [
       "mocha"
     ]
-  },
-  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0"
+  }
 }
