--- a/packages/metascraper/package.json
+++ b/packages/metascraper/package.json
@@ -85,6 +85,7 @@
     "test": "NODE_PATH=.. TZ=UTC NODE_ENV=test nyc mocha test"
   },
   "license": "MIT",
+  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0",
   "mocha": {
     "bail": true,
     "recursive": true,
@@ -96,6 +97,5 @@
     "env": [
       "mocha"
     ]
-  },
-  "gitHead": "1576714d9f20399e09b896aaf92d74a00b2457d0"
+  }
 }
